=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 v1.025 - Under Development

=over

=item *

Fixed a bug in the upgrade process of 1.024.  Users of 1.024 should
immediately upgrade to 1.025.  [Peter]

=item *

C<bin/krang_publish> and C<bin/krang_delete> now properly interact
with hidden stories. [Peter]

=back


=head2 v1.024 - September 24, 2004

=over

=item *

Send HTTP header with root menu. [Aaron Ross]

=item *

Escape values on login page to foil cross-site scripting attacks. [Perrin]

=item *

Add option to show 100 results per page. [Perrin]

=item *

Restructured the index page in docs/ - added a 'User' section, moved a
few things around to make things easier for new users. [Peter]

=item *

Added C<bin/krang_info> - a simple command-line script to list the
currently configured status of Krang.  [Peter]

=item *

Reordered subroutine exports in L<Krang::Element> to fix a library
loading loop that cropped up under some circumstances.  Thanks to
Michael Peters (mpeters@plusthree.com) for finding it.  [Peter]


=item *

Added support for hidden stories, based on class definitions.  A
hidden story is one that, by default, does not show up in calls to
C<find()>.  This is useful for auto-generated story lists where some
types of stories shouldn't be listed.  For example, this will be used
immediately by HREF[Krang Sitemap|/addons.html] and 
HREF[Krang RSS|/addons.html], neither of which should show in most lists.  See
L<Krang::ElementClass::TopLevel> and L<Krang::Story> for more
information.  [Peter]

=item *

Upgraded L<IPC::Run> to 0.78, which is now pseudohash-free (later
versions of Perl complain). [Peter]

=item *

Moved htdocs/help/history.html to htdocs/help/log.html to correct links.
[Perrin]

=item *

Updated L<Imager> to 0.43. [Peter]

=item *

Updated L<HTTP::BrowserDetect> to the latest version, 0.98. [Peter]

=item *

Limited the directories being searched by C<bin/krang_install> when