@@ -531,24 +531,12 @@ sub publish_story {
 
             if (my $err = $@) {
                 if ($skip_callback) {
-                    if (ref $err) {
-                        if ($@->isa('Krang::Publisher::FileWriteError')) {
-                            $skip_callback->(object => $object,
-                                             error  => 'output_error',
-                                             path   => $err->destination,
-                                             error_msg => $err->system_error);
-                        } else {
-                            # call generic skip_callback.
-                            $skip_callback->(object => $object, error => $err->isa);
-                        }
-                    } else {
-                        # call generic skip_callback with the error as string.
-                        $skip_callback->(object => $object, error => $err);
-                    }
-                }
-                # the skip_callback is not used by the CGIs, re-propegate the error so the UI
-                # can handle it.
-                else {
+                    # call skip_callback, hopefully with a real error
+                    # object
+                    $skip_callback->(object => $object, error => $err);
+                } else {
+                    # the skip_callback is not used by the CGIs,
+                    # re-propegate the error so the UI can handle it.
                     die ($err);
                 }
             }
